# freeware

./: CMakeLists.txt  README.md
src/: AppButton.hpp  ComponentStorage.hpp  Drawable.hpp  ECS.hpp  Entity.hpp  Game.hpp  app.hpp  button.hpp  desktop.hpp  game.hpp  grid.hpp  main.cpp  util.hpp
src/SDL3/: BlendMode.hpp  Clock.hpp  Event.hpp  Init.hpp  Mouse.hpp  MouseButtonEvent.hpp  Rect.hpp  Renderer.hpp  Sprite.hpp  Texture.hpp  Vec.hpp  Window.hpp  rect.hpp  texture.cpp  texture.hpp
src/engine/: engine.cpp  engine.hpp  game_object.hpp  i_game.hpp  rect_renderer.hpp  renderer.cpp  renderer.hpp  util.hpp  window.cpp  window.hpp
src/game/: game.hpp
src/sdl3/: game.hpp  renderer.hpp  sdl.hpp  texture.hpp  window.hpp
